<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_box"
            android:hint="@string/hint_username"
            android:textColor="@color/color_white"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="@color/color_text_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:textColor="@color/color_white"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_box"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/color_text_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername" />
        <Button
            android:text="@string/button_login"
            android:id="@+id/btnLogin"
            android:textColor="@color/color_white"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clWrong"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F34949"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_login_fail"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@color/color_white"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"/>

        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/txtDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_dismiss"
            android:textColor="#B63737"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>